--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/jest": "^26.0.20",
     "@types/node": "^12.19.15",
     "@types/react": "^16.14.3",
+    "@types/react-alice-carousel": "^1.15.3",
     "@types/react-dom": "^16.9.10",
     "@types/react-router": "^5.1.11",
     "@types/react-router-dom": "^5.1.7",
